--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ html,body
 }
 
 h1{ text-align:center; }
-h1, h2, a, p{ font-family:MarkerFeltRegular }
+h1, h2, a, p{ font-family:MarkerFeltRegular; font-size:120%; }
 
 ul{ padding:0; list-style-type: none; }
 
@@ -32,7 +32,6 @@ ul{ padding:0; list-style-type: none; }
 	#navbar{ text-align:center; background-image:url('../img/thoughtBubble.png'); background-repeat: no-repeat; background-size: 200% 100%; }
 	#leftColumn{ width:100%; height:auto; float:none; }
 	#rightColumn{ width:100%; float:none;}
-	#gigi{ width:100%; }
 }
 
 @font-face {
