--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,9 @@ ul{ padding:0; list-style-type: none; }
 .navbar-active{ color:purple; }
 .navbar-item{ margin-right:3%; }
 
+#announcementHeader{ text-decoration:underline; text-align:center; }
+#gigi{ width:50%; float:left; }
+#gigiSpeechContainer{ width:50%; float:right; }
 #leftColumn{ width:10%; float:left; background-color:#c9db53; border-style:hidden solid; border-width:2px; padding:10px; height:100%; }
 #navbar{ text-align:center; background-image:url('../img/thoughtBubble.png'); background-repeat: no-repeat; background-size: 70% 100%; padding-bottom:10%; padding-top:10%; background-position-x:center }
 #rightColumn{ width:85%; float:right; }
