--- a/style/style.css
+++ b/style/style.css
@@ -9,18 +9,26 @@ html,body
 
 h1{ text-align:center; }
 h1, h2, a, p{ font-family:MarkerFeltRegular; font-size:120%; }
+h3{ font-family:MarkerFeltRegular; font-size:150%; }
+h4{text-align:center;}
+h4{ font-family:MarkerFeltRegular; font-size:170%; }
 
 ul{ padding:0; list-style-type: none; }
 
 .navbar-active{ color:purple; }
 .navbar-item{ margin-right:3%; }
-
+.gigiSpeechBlock > * { 
+    margin-right:3%;
+    display: inline-block;
+}
 #announcementHeader{ text-decoration:underline; text-align:center; }
 #gigi{ width:50%; float:left; }
-#gigiSpeechContainer{ width:50%; float:right; }
-#leftColumn{ width:10%; float:left; background-color:#c9db53; border-style:hidden solid; border-width:2px; padding:10px; height:100%; }
-#navbar{ text-align:center; background-image:url('../img/thoughtBubble.png'); background-repeat: no-repeat; background-size: 70% 100%; padding-bottom:10%; padding-top:10%; background-position-x:center }
+#gigiSpeechContainer{ width:50%;}
+#leftColumn{ width:10%; float:left; background-color:#c9db53; border-style:hidden solid; border-width:2px; padding:10px; height:135%; position:fixed;  }
+#navbar{ text-align:center; background-image:url('../img/thoughtBubble.png'); background-repeat: no-repeat; background-size: 85% 100%; padding-bottom:10%; padding-top:10%; background-position-x:center }
+#navbarOt{ text-align:center; background-image:url('../img/thoughtBubble2.png'); background-repeat: no-repeat; background-size: 85% 100%; padding-bottom:10%; padding-top:10%; background-position-x:center }
 #rightColumn{ width:85%; float:right; }
+
 
 @media screen and (max-device-width:1700px){
 	#navbar{ text-align:center; background-image:url('../img/thoughtBubble.png'); background-repeat: no-repeat; background-size: 100% 120%; }
@@ -36,6 +44,28 @@ ul{ padding:0; list-style-type: none; }
 	#leftColumn{ width:100%; height:auto; float:none; }
 	#rightColumn{ width:100%; float:none;}
 }
+
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
 
 @font-face {
   font-family: MarkerFeltRegular;
